js/js.translator/testData/incremental/invalidation/toplevelProperties/lib1/l1.3.kt
konst globalVal = 3

inline konst inlineGlobalVal: String
    get() = "1"
